--- a/index.html
+++ b/index.html
@@ -427,14 +427,13 @@ Just to review, here are the Tessera software components
 <p>
 The first three are QuickStarts, very easy to carry out and described next.
 The second three have the full Tessera Software stack. For Vagrant and Amazon
-it is quick and easy because the components are bundled up for you and ready
-to go. For Workstation it is quick and easy because you just install
+installation is quick and easy because the components are bundled up for you
+and ready to go. For Workstation it is quick and easy because you just install
 datadr, Trelliscope, and a couple of R packages.
 </p>
 <p>
-Installing on your own cluster is
-more complex, and typically requires collaboration with your IT staff. Our
-cluster installation manual is HERE.
+Installing on your own cluster is more complex, and typically requires
+collaboration with your IT staff. Our cluster installation manual is HERE.
               </p>
             </div>
           </div>
@@ -449,9 +448,12 @@ cluster installation manual is HERE.
             <div class="panel-body">
               <h3>Install</h3>
               <!-- <hr class="big-hr black"> -->
+
+<!--
               <p>
 Just to review, here are the Tessera software components
                 </p>
+                <p>
                 <ul>
                   <li>R</li>
                   <li>Hadoop</li>
@@ -463,8 +465,9 @@ Just to review, here are the Tessera software components
                   <li>Protocol Buffers</li>
                   <li>Oracle Java</li> 
                 </ul>
-                <p>
               </p>
+-->
+
               <h4><i class="icon-gift"></i>Workstation Installation</h4>
               <div class="quickstart-text">
                 <p>
