--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <section id="hooks" class="lightblue">
     <div class="container">
       <div class="row equal">
-        <div class="col-sm-4">
+        <div class="col-sm-6">
           <div class="panel hook-panel">
             <div class="panel-body">
               <div class="hook-circle">
@@ -116,7 +116,7 @@ program in the elegantly designed, powerful R language front end, and can apply 
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6">
           <div class="panel hook-panel">
             <div class="panel-body">
               <div class="hook-circle">
@@ -147,7 +147,10 @@ size and complexity of data you are able to analyze.  Getting started is easy.
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+      </div>
+      
+      <div class="row equal">
+        <div class="col-sm-6">
           <div class="panel hook-panel">
             <div class="panel-body">
               <div class="hook-circle">
@@ -170,7 +173,7 @@ D&amp;R statistics. And they invite you to join developer and user groups.
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6">
           <div class="panel hook-panel">
             <div class="panel-body">
               <div class="hook-circle">
@@ -411,18 +414,32 @@ We provide four ways to get started with Tessera:
               <p>
 Just to review, here are the Tessera software components
                 </p>
-                <ul>
-                  <li>R</li>
-                  <li>Hadoop</li>
-                  <li>Rhipe</li>
-                  <li>datadr</li>
-                  <li>Trelliscope</li>
-                  <li>RStudio Server</li>
-                  <li>Shiny Server</li>
-                  <li>Protocol Buffers</li>
-                  <li>Oracle Java</li>
-                </ul>
-                <p>
+
+    <div class="container">
+      <div class="row equal">
+        <div class="col-sm-3">
+            <ul>
+              <li>R</li>
+              <li>datadr</li>
+              <li>Shiny Server</li>
+            </ul>
+        </div>
+        <div class="col-sm-3">
+            <ul>
+              <li>Hadoop</li>
+              <li>Trelliscope</li>
+              <li>Protocol Buffers</li>
+            </ul>
+        </div>
+        <div class="col-sm-3">
+            <ul>
+              <li>Rhipe</li>
+              <li>RStudio Server</li>
+              <li>Oracle Java</li>
+            </ul>
+        </div>
+      </div>
+    </div>
 
 <p>
 The first three are QuickStarts, very easy to carry out and described next.
