Added .tex and .pdf files for cluster installation mannual. Added link to mannual in index.html.

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ datadr, Trelliscope, and a couple of R packages.
 </p>
 <p>
 Installing on your own cluster is more complex, and typically requires
-collaboration with your IT staff. Our cluster installation manual is HERE.
+collaboration with your IT staff. Our cluster installation manual is <a href="InstallCluster.pdf">here</a>.
               </p>
             </div>
           </div>
