--- a/index.html
+++ b/index.html
@@ -403,18 +403,10 @@ src="images/others.png" alt="rhipe">
             <div class="panel-body">
               <h3>Installation Overview</h3>
       <!-- <hr class="big-hr black"> -->
-              <p>
-We provide four ways to get started with Tessera:
-<p>
-<font color="red">
-1 Workstation. 2 Vagrant Virtual Machine. 3 Amazon Elastic MapReduce.
-4 Install on Your Own Cluster.
-</font>
-</p>
+
               <p>
 Just to review, here are the Tessera software components
                 </p>
-
     <div class="container">
       <div class="row equal">
         <div class="col-sm-3">
@@ -441,9 +433,18 @@ Just to review, here are the Tessera software components
       </div>
     </div>
 
+              <p>
+We provide four ways to get started with Tessera:
 <p>
-The first three are QuickStarts, very easy to carry out and described next.
-The second three have the full Tessera Software stack. For Vagrant and Amazon
+<font color="red">
+(1) Workstation. (2) Vagrant Virtual Machine. (3) Amazon Elastic MapReduce.
+(4) Install on Your Cluster.
+</font>
+</p>
+
+<p>
+(1), (2), and (3) are QuickStarts, very easy to carry out and described next.
+(2), (3), and (4) have the full Tessera Software stack. For Vagrant and Amazon,
 installation is quick and easy because the components are bundled up for you
 and ready to go. For Workstation it is quick and easy because you just install
 datadr, Trelliscope, and a couple of R packages.
